--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/angular.min.js"></script>
 	<script src="lib/angular-route.min.js"></script>
+    <script src="lib/ui-bootstrap-tpls-1.3.1.min.js"></script>
+    <!--<script src="lib/ui-bootstrap-1.3.1.min.js"></script>-->
 
 	<script src="dist/app.js"></script>
 </body>
