--- a/public/app/controllers/gifModal/gifModal.html
+++ b/public/app/controllers/gifModal/gifModal.html
@@ -1,5 +1,4 @@
 <div>
-    modal is here: passed gif
-    {{vm.passedGifData}}
+   <img src="{{vm.passedGifData.images.fixed_height.url}}" alt="{{vm.passedGifData.slug}}">
     <button ng-click="vm.cancel()">Close</button>
 </div>
