--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="dist/style.css">
+	<link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/style.css">
 
 	<title>Kittens and Puppies GIF Search App</title>
 	<!-- <base href="/" /> -->
@@ -19,11 +20,12 @@
 
         </div>
 				
-	</div><!-- wrapper ends -->
+	</div>
 
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/angular.min.js"></script>
 	<script src="lib/angular-route.min.js"></script>
+    <script src="lib/angular-animate.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-1.3.1.min.js"></script>
     <!--<script src="lib/ui-bootstrap-1.3.1.min.js"></script>-->
 
