--- a/public/app/controllers/gifModal/gifModal.html
+++ b/public/app/controllers/gifModal/gifModal.html
@@ -1,4 +1,4 @@
 <div class="gif-modal">
-   <img src="{{vm.passedGifData.images.fixed_height.url}}" alt="{{vm.passedGifData.slug}}">
+   <img src="{{vm.passedGifData.images.downsized_large.url}}" alt="{{vm.passedGifData.slug}}">
    <button ng-click="vm.cancel()">x</button>
 </div>
